OpenHealth/force-app/main/default/force-app/main/default/objects/MedicalRecord__c/MedicalRecord__c.object-meta.xml
<CustomObject>
    <label>MedicalRecord</label>
    <pluralLabel>MedicalRecords</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>