OpenHealth/force-app/main/default/force-app/main/default/objects/MedicalRecord__c/ChronicConditions__c.field-meta.xml
<CustomField>
    <fullName>ChronicConditions__c</fullName>
    <label>ChronicConditions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>