OpenHealth/force-app/main/default/force-app/main/default/objects/MedicalRecord__c/MedicalHistory__c.field-meta.xml
<CustomField>
    <fullName>MedicalHistory__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>